start of binary map

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';"
     />
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
+    <title>GameEngine: core</title>
   </head>
   <body style="overflow: hidden">
     <script type="module" src="src/sandbox/index.ts"></script>
