start of ECS rework

--- a/src/core/debugger/renderStats/renderFrame.html
+++ b/src/core/debugger/renderStats/renderFrame.html
@@ -11,7 +11,21 @@
     <p class="framer_slot">Frame time: 0.0ms</p>
     <p class="framer_slot">CPU time: 0.0ms</p>
     <p class="framer_slot">GPU time: 0.0ms</p>
+    <p class="framer_slot">====GAME DATA====</p>
     <p class="framer_slot">QuadCount: 0</p>
+    <p class="framer_slot">QuadsLimit: 0</p>
+    <p class="framer_slot">LightsCount: 0</p>
+    <p class="framer_slot">LightsLimit: 0</p>
+    <p class="framer_slot">====RENDER OPTIONS====</p>
+    <p class="framer_slot">blooming: 0</p>
+    <p class="framer_slot">bloomSTR: 0</p>
+    <p class="framer_slot">lighting: 0</p>
+    <p class="framer_slot">globalEffect: 0</p>
+    <p class="framer_slot">globalEffectSTR: 0</p>
+    <p class="framer_slot">colorCorrection: 0</p>
+    <p class="framer_slot">camera: custome</p>
+    <p class="framer_slot">drawCalls: 0</p>
+    <p class="framer_slot">computeCalls: 0</p>
     <p class="framer_slot">Stats Refresh rate: 1s</p>
   </div>
 </div>
